# Slyde

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.emulator  LICENSE  Memento.md  PLAN.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release-softframe.yml
deploy/emulator/: compose.yaml
deploy/examples/kdocker/: .env.example  README.md  compose.yaml
deploy/softframe/: README.md  install.sh  memento-frame.service
docs/: USAGE.md  architecture.md  competitive-analysis.html  frame-backends.md  framework-design.md  protocol.md  sungale-eframe-integration-plan.md  supported-frames.md  ui-design.md  ui-ia-design-review.md
experiments/aluratek-eframe/: .gitignore  FINDINGS.md  README.md  analyze_apk.py  apk_extract.md  capture_proxy.py  capture_wake.py  fake_cloud.py  mitm_eframe.md  pull_library.py
experiments/switchbot-frame/: FINDINGS.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AddPhotos.tsx  AlbumBrowser.tsx  FleetFirmware.tsx  FrameAlbums.tsx  FrameCard.tsx  FramePanel.tsx  FramePicker.tsx  FrameView.tsx  LibraryTab.tsx  OnFrame.tsx  SettingsPanel.tsx  SettingsTab.tsx  StatusPanel.tsx  SyncedAlbums.tsx
frontend/src/components/albums/: AddToFolder.tsx  AlbumsTab.tsx  FolderSyncStatus.tsx
frontend/src/lib/: firmware.ts  frames.ts  useSyncJob.ts
frontend/src/pages/: Activity.tsx  ComingSoon.tsx  Curate.tsx  FleetDashboard.tsx  FrameDetail.tsx  FramesList.tsx  Settings.tsx
frontend/src/ui/: badges.tsx  confirm.tsx  index.ts  primitives.tsx  relTime.ts  status.ts  toast.tsx  usePoll.ts
scripts/: build_softframe_bundle.py  demo_capture.py  switchbot_smoke.py
tests/: conftest.py  test_albums.py  test_backend_api.py  test_backends.py  test_config.py  test_crypto.py  test_delivery.py  test_delivery_service.py  test_emulator_cli.py  test_emulator_state.py  test_emulator_web.py  test_firmware.py  test_frame_import.py  test_frame_registry.py  test_image_cache.py  test_imaging.py  test_immich.py  test_integration.py  test_library.py  test_naming.py  test_panel_bmp.py  test_previews.py  test_processing.py  test_protocol.py  test_renderer.py  test_scheduler.py  test_served_backend.py  test_softframe_bundle.py  test_switchbot.py  test_switchbot_backend.py  test_updater.py
