# Workspace root for the Slyde monorepo.
# Dev tooling config lives here; runtime packages live under packages/*.
[project]
name = "slyde-workspace"
version = "0.0.0"
description = "Dev workspace for Slyde — multi-frame hub + Memento frame tooling (not published)."
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
memento-core = { workspace = true }
memento-emulator = { workspace = true }
slyde-backend = { workspace = true }

[dependency-groups]
dev = [
    "memento-core",
    "memento-emulator",
    "slyde-backend",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "packages/memento-core/src",
    "packages/memento-emulator/src",
    "packages/slyde-backend/src",
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables as parameter defaults by design.
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
files = [
    "packages/memento-core/src",
    "packages/memento-emulator/src",
    "packages/slyde-backend/src",
]

# pygame is an optional ('display' extra) native dep, not installed for type-checking/CI.
[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error"]
